--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>ccfolia log getter</title>
-    <script src="jquery-3.5.1.min.js"></script>
+    <script src="main.js"></script>
     <script>
         var request = new XMLHttpRequest();
         var message_json = [];
